--- a/vc2012/KinectPoseRecognition.vcxproj
+++ b/vc2012/KinectPoseRecognition.vcxproj
@@ -139,7 +139,6 @@
     <ClCompile Include="..\src\tools\Params.cpp" />
     <ClCompile Include="..\src\tools\PreloaderCircle.cpp" />
     <ClCompile Include="..\src\tools\QRcode.cpp" />
-    <ClCompile Include="..\src\tools\Toucher.cpp" />
     <ClCompile Include="..\src\tools\VirtualKeyboard.cpp" />
     <ClCompile Include="..\src\Utils.cpp" />
   </ItemGroup>
@@ -156,6 +155,7 @@
     <ClInclude Include="..\src\1dollar\Dollar.h" />
     <ClInclude Include="..\src\camera\CameraAdapter.h" />
     <ClInclude Include="..\src\controllers\fonts\FontStore.h" />
+    <ClInclude Include="..\src\controllers\Game.h" />
     <ClInclude Include="..\src\controllers\photomaker\PhotoMaker.h" />
     <ClInclude Include="..\src\controllers\Pose.h" />
     <ClInclude Include="..\src\controllers\saver\Saver.h" />
